versioned_docs/version-7.0/indexes/querying/content/_searching-php.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* Prior to reading this article, please refer to [Full-Text search with dynamic queries](../../../client-api/session/querying/text-search/full-text-search.mdx) 
  to learn about the `search` method.  

* **All capabilities** provided by `search` with a dynamic query can also be used when querying a static-index.

* However, as opposed to making a dynamic search query where an auto-index is created for you,  
  when using a **static-index**:  

    * You must configure the index-field in which you want to search.  
      See examples below.  
      
    * You can configure which analyzer will be used to tokenize this field.  
      Learn more in [Setting analyzer for index-field](../../../indexes/using-analyzers.mdx#setting-analyzer-for-index-field).    
    
* In this article:
  * [Indexing single field for FTS](../../../indexes/querying/searching.mdx#indexing-single-field-for-fts)
  * [Indexing multiple fields for FTS](../../../indexes/querying/searching.mdx#indexing-multiple-fields-for-fts)
  * [Indexing all fields for FTS (using AsJson)](../../../indexes/querying/searching.mdx#indexing-all-fields-for-fts-using-asjson)
  * [Indexing dynamic fields for FTS](../../../indexes/querying/searching.mdx#indexing-dynamic-fields-for-fts)
  * [Boosting search results](../../../indexes/querying/searching.mdx#boosting-search-results)
  * [Analyzer-generated phrases in static-index searches](../../../indexes/querying/searching.mdx#analyzer-generated-phrases-in-static-index-searches)
  * [Searching with wildcards](../../../indexes/querying/searching.mdx#searching-with-wildcards)
      * [When using RavenStandardAnalyzer or StandardAnalyzer or NGramAnalyzer](../../../indexes/querying/searching.mdx#when-usingoror)
      * [When using a custom analyzer](../../../indexes/querying/searching.mdx#when-using-a-custom-analyzer)
      * [When using the Exact analyzer](../../../indexes/querying/searching.mdx#when-using-the-exact-analyzer)

</Admonition>



## Indexing single field for FTS

#### The index:

<TabItem value="index_1" label="index_1">
<CodeBlock language="php">
{`// The IndexEntry class defines the index-fields
class Employees_ByNotes_IndexEntry
\{
    private ?string $employeeNotes = null;

    public function getEmployeeNotes(): ?string
    \{
        return $this->employeeNotes;
    \}

    public function setEmployeeNotes(?string $employeeNotes): void
    \{
        $this->employeeNotes = $employeeNotes;
    \}
\}

class Employees_ByNotes extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        // The 'map' function defines the content of the index-fields
        $this->map =
            "docs.Employees.Select(employee => new \{ " .
            "    employeeNotes = employee.Notes[0] " .
            "\})";

        // Configure the index-field for FTS:
        // Set 'FieldIndexing::search' on index-field 'employeeNotes'
        $this->index("employeeNotes", FieldIndexing::search());

        // Optionally: Set your choice of analyzer for the index-field.
        // Here the text from index-field 'employeeNotes' will be tokenized by 'WhitespaceAnalyzer'.
        $this->analyze("employeeNotes", "WhitespaceAnalyzer");

        // Note:
        // If no analyzer is set then the default 'RavenStandardAnalyzer' is used.
    \}
\}
`}
</CodeBlock>
</TabItem>

#### Query with Search:

* Use `search` to make a full-text search when querying the index.  

* Refer to [Full-Text search with dynamic queries](../../../client-api/session/querying/text-search/full-text-search.mdx) for all available **Search options**,  
  such as using wildcards, searching for multiple terms, etc.

<Tabs groupId='languageSyntax'>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`/** @var array<Employee> $employees */
$employees = $session
     // Query the index
    ->query(Employees_ByNotes_IndexEntry::class, Employees_ByNotes::class)
     // Call 'search':
     // pass the index field that was configured for FTS and the term to search for.
    ->search("employeeNotes", "French")
    ->ofType(Employee::class)
    ->toList();

// * Results will contain all Employee documents that have 'French' in their 'Notes' field.
//
// * Search is case-sensitive since field was indexed using the 'WhitespaceAnalyzer'
//   which preserves casing.
`}
</CodeBlock>
</TabItem>
<TabItem value="documentQuery" label="documentQuery">
<CodeBlock language="php">
{`/** @var array<Employee> $employees */
$employees = $session->advanced()
     // Query the index
    ->documentQuery(Employees_ByNotes_IndexEntry::class, Employees_ByNotes::class)
     // Call 'search':
     // pass the index field that was configured for FTS and the term to search for.
    ->search("employeeNotes", "French")
    ->ofType(Employee::class)
    ->toList();

// * Results will contain all Employee documents that have 'French' in their 'Notes' field.
//
// * Search is case-sensitive since field was indexed using the 'WhitespaceAnalyzer'
//   which preserves casing.
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByNotes"
where search(employeeNotes, "French")
`}
</CodeBlock>
</TabItem>
</Tabs>



## Indexing multiple fields for FTS

#### The index:

<TabItem value="index_2" label="index_2">
<CodeBlock language="php">
{`class Employees_ByEmployeeData_IndexEntry
\{
    private ?array $employeeData = null;

    public function getEmployeeData(): ?array
    \{
        return $this->employeeData;
    \}

    public function setEmployeeData(?array $employeeData): void
    \{
        $this->employeeData = $employeeData;
    \}
\}

class Employees_ByEmployeeData extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        $this->map =
            "docs.Employees.Select(employee => new \{ " .
            // Multiple document-fields can be indexed
            // into the single index-field 'employeeData'
            "    employeeData = new object[] \{ " .
            "        employee.FirstName, " .
            "        employee.LastName, " .
            "        employee.Title, " .
            "        employee.Notes " .
            "    \} " .
            "\})";

        // Configure the index-field for FTS:
        // Set 'FieldIndexing::search' on index-field 'employeeData'
        $this->index("employeeData", FieldIndexing::search());

        // Note:
        // Since no analyzer is set, the default 'RavenStandardAnalyzer' is used.
    \}
\}
`}
</CodeBlock>
</TabItem>

#### Sample query:

<Tabs groupId='languageSyntax'>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`/** @var array<Employee> $employees */
$employees = $session
     // Query the static-index
    ->query(Employees_ByEmployeeData_IndexEntry::class, Employees_ByEmployeeData::class)
    ->openSubclause()
     // A logical OR is applied between the following two search calls:
    ->search("employeeData", "Manager")
     // A logical AND is applied between the following two terms:
    ->search("employeeData", "French Spanish", SearchOperator::and())
    ->closeSubclause()
    ->ofType(Employee::class)
    ->toList();

// * Results will contain all Employee documents that have:
//   ('Manager' in any of the 4 document-fields that were indexed)
//   OR
//   ('French' AND 'Spanish' in any of the 4 document-fields that were indexed)
//
// * Search is case-insensitive since the default analyzer is used
`}
</CodeBlock>
</TabItem>
<TabItem value="documentQuery" label="documentQuery">
<CodeBlock language="php">
{`/** @var array<Employee> $employees */
$employees = $session->advanced()
     // Query the static-index
    ->documentQuery(Employees_ByEmployeeData_IndexEntry::class, Employees_ByEmployeeData::class)
    ->openSubclause()
     // A logical OR is applied between the following two search calls:
    ->search("employeeData", "Manager")
     // A logical AND is applied between the following two terms:
    ->search("employeeData", "French Spanish", SearchOperator::and())
    ->closeSubclause()
    ->ofType(Employee::class)
    ->toList();

// * Results will contain all Employee documents that have:
//   ('Manager' in any of the 4 document-fields that were indexed)
//   OR
//   ('French' AND 'Spanish' in any of the 4 document-fields that were indexed)
//
// * Search is case-insensitive since the default analyzer is used
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByEmployeeData"
where (search(employeeData, "Manager") or search(employeeData, "French Spanish", and))
`}
</CodeBlock>
</TabItem>
</Tabs>



## Indexing all fields for FTS (using AsJson)

* To search across ALL fields in a document without defining each one explicitly, use the `AsJson` method,  
  which is available in the **C# LINQ string** that is assigned to the `map` property in the PHP index class,
  as shown in the example below.

* This approach makes the index robust to changes in the document schema.  
  By calling `.Select(x => x.Value)` on the result of `AsJson(...)`,
  the index automatically includes values from ALL existing and newly added properties
  and there is no need to update the index when the document structure changes.

* <Admonition type="info" title="">
  This indexing method is supported only when using **Lucene** as the indexing engine.
  </Admonition>

#### The index:

<TabItem value="index_3" label="index_3">
<CodeBlock language="php">
{`class Products_ByAllValues_IndexEntry
\{
    private ?string $allValues = null;

    public function getAllValues(): ?string
    \{
        return $this->allValues;
    \}

    public function setAllValues(?string $allValues): void
    \{
        $this->allValues = $allValues;
    \}
\}

class Products_ByAllValues extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        $this->map =
            "docs.Products.Select(product => new \{ " .
            // Use the 'AsJson' method to convert the document into a JSON-like structure
            // and call 'Select' to extract only the values of each property
            "    allValues = this.AsJson(product).Select(x => x.Value) " .
            "\})";

        // Configure the index-field for FTS:
        // Set 'FieldIndexing::search' on index-field 'allValues'
        $this->index("allValues", FieldIndexing::search());

        // Note:
        // Since no analyzer is set, the default 'RavenStandardAnalyzer' is used.

        // Set the search engine type to Lucene:
        $this->setSearchEngineType(SearchEngineType::lucene());
    \}
\}
`}
</CodeBlock>
</TabItem>

#### Sample query:

<Tabs groupId='languageSyntax'>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`/** @var array<Product> $products */
$products = $session
    ->query(Products_ByAllValues_IndexEntry::class, Products_ByAllValues::class)
    ->search("allValues", "tofu")
    ->ofType(Product::class)
    ->toList();

// * Results will contain all Product documents that have 'tofu'
//   in ANY of their fields.
//
// * Search is case-insensitive since the default analyzer is used.
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Products/ByAllValues"
where search(allValues, "tofu")
`}
</CodeBlock>
</TabItem>
</Tabs>



## Indexing dynamic fields for FTS

* [Dynamic index fields](../../../indexes/using-dynamic-fields.mdx) are created at indexing time, with names and values derived from document content,  
  rather than being predefined as fixed index fields in the index definition.  
  This allows you to query the index by fields that are not known at index definition or deployment time.

* Dynamic index fields can be configured for full-text search just like regular index fields.  
  Learn more in [Indexing dynamic fields for full-text search](../../../indexes/using-dynamic-fields.mdx#indexing-dynamic-fields-for-full-text-search).



## Boosting search results

* In order to prioritize results, you can provide a boost value to the searched terms.  
  This can be applied by either of the following:

  * Add a boost value to the relevant index-field **inside the index definition**.  
    Refer to article [indexes - boosting](../../../indexes/boosting.mdx).

  * Add a boost value to the queried terms **at query time**.  
    Refer to article [Boost search results](../../../client-api/session/querying/text-search/boost-search-results.mdx).



## Analyzer-generated phrases in static-index searches

* The rules for parsing `search()` input and matching multiple tokens produced from one search term are described in
  [Search with analyzer-generated phrases](../../../client-api/session/querying/text-search/full-text-search.mdx#search-with-analyzer-generated-phrases).

* The phrase-matching behavior is the same for dynamic and static-index queries and applies to both Corax and Lucene.

* The difference for a static index is that you can select the analyzer used for each searchable index-field.
  The selected analyzer determines whether one search term remains one token or produces multiple tokens that RavenDB searches as a phrase.

---

### How the index-field analyzer affects the query

The analyzer configured for an index-field normally processes both the field content at indexing time and the search terms at query time.

For example, selected built-in analyzers process the same search term as follows:

| Analyzer configured for the index-field                                                                   | Query-time tokens from `sales%representative` | Query behavior                                                                     |
|-----------------------------------------------------------------------------------------------------------|-----------------------------------------------|------------------------------------------------------------------------------------|
| [RavenStandardAnalyzer](../../../indexes/using-analyzers.mdx#using-the-default-search-analyzer)           | `sales`, `representative`                     | Searches the two tokens as a **phrase**                                            |
| [StandardAnalyzer](../../../indexes/using-analyzers.mdx#analyzers-that-remove-common-stop-words)          | `sales`, `representative`                     | Searches the two tokens as a **phrase**                                            |
| [WhitespaceAnalyzer](../../../indexes/using-analyzers.mdx#analyzers-that-do-not-remove-common-stop-words) | `sales%representative`                        | Searches for one case-sensitive token;<br/>no analyzer-generated phrase is created |

<Admonition type="info" title="">

#### Query-time analyzer exceptions:

* When an index-field uses [NGramAnalyzer](../../../indexes/using-analyzers.mdx#analyzers-that-tokenize-according-to-the-defined-number-of-characters), RavenDB uses the default search analyzer instead of `NGramAnalyzer`
  to process full-text search terms at query time.

* Search terms that use wildcards follow the analyzer rules described in
  [Searching with wildcards](../../../indexes/querying/searching.mdx#searching-with-wildcards).

Learn more in [Analyzers at query time](../../../indexes/using-analyzers.mdx#analyzers-at-query-time).

</Admonition>

---

<Admonition type="note" title="">

### Example

The `Employees_ByEmployeeData` index defined in
[Indexing multiple fields for FTS](../../../indexes/querying/searching.mdx#indexing-multiple-fields-for-fts)
does not assign an analyzer to `employeeData`, so the field uses the default `RavenStandardAnalyzer`.

For the following query, `RavenStandardAnalyzer` produces the tokens `sales` and `representative`.  
RavenDB applies the phrase-matching rules described in the linked [full-text search section](../../../client-api/session/querying/text-search/full-text-search.mdx#how-the-input-form-affects-matching).

<Tabs groupId='languageSyntax'>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`/** @var array<Employee> $employees */
$employees = $session
    ->query(Employees_ByEmployeeData_IndexEntry::class, Employees_ByEmployeeData::class)
    ->search("employeeData", "sales%representative")
    ->ofType(Employee::class)
    ->toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByEmployeeData"
where search(employeeData, "sales%representative")
`}
</CodeBlock>
</TabItem>
</Tabs>

For the behavior of existing Corax indexes that predate phrase-query support, see
[Search-engine compatibility](../../../client-api/session/querying/text-search/full-text-search.mdx#search-engine-compatibility).

</Admonition>



## Searching with wildcards

* When making a full-text search with wildcards in the search terms,
  the presence of wildcards (`*`) in the terms sent to the search engine is determined by the transformations applied by the
  [analyzer](../../../indexes/using-analyzers.mdx) used in the index.

* Note the different behavior in the following cases, as described below:
  * [When using RavenStandardAnalyzer or StandardAnalyzer or NGramAnalyzer](../../../indexes/querying/searching.mdx#when-usingoror)
  * [When using a custom analyzer](../../../indexes/querying/searching.mdx#when-using-a-custom-analyzer)
  * [When using the Exact analyzer](../../../indexes/querying/searching.mdx#when-using-the-exact-analyzer)

* When using [Corax](../../../indexes/search-engine/corax.mdx) as the search engine,  
  this behavior will only apply to indexes that are newly created or have been reset.

<Admonition type="note" title="">

##### When using&nbsp;`RavenStandardAnalyzer`&nbsp;or`StandardAnalyzer`&nbsp;or&nbsp;`NGramAnalyzer`:
Usually, the same analyzer used to tokenize field content at **indexing time** is also used to process the terms provided in the **full-text search query**
before they are sent to the search engine to retrieve matching documents.

**However, in the following cases**:

* When making a [dynamic search query](../../../client-api/session/querying/text-search/full-text-search.mdx)
* or when querying a static index that uses the default [RavenStandardAnalyzer](../../../indexes/using-analyzers.mdx#using-the-default-search-analyzer)
* or when querying a static index that uses the [StandardAnalyzer](../../../indexes/using-analyzers.mdx#analyzers-that-remove-common-stop-words)
* or when querying a static index that uses the [NGramAnalyzer](../../../indexes/using-analyzers.mdx#analyzers-that-tokenize-according-to-the-defined-number-of-characters)

the queried terms in the _search_ method are processed with the [LowerCaseKeywordAnalyzer](../../../indexes/using-analyzers.mdx#using-the-default-analyzer)  
before being sent to the search engine.

This analyzer does Not remove the `*`, so the terms are sent with `*`, as provided in the search terms.  
For example:

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="php">
{`class Employees_ByNotes_usingDefaultAnalyzer_IndexEntry
\{
    private ?string $employeeNotes = null;

    public function getEmployeeNotes(): ?string
    \{
        return $this->employeeNotes;
    \}

    public function setEmployeeNotes(?string $employeeNotes): void
    \{
        $this->employeeNotes = $employeeNotes;
    \}
\}

class Employees_ByNotes_usingDefaultAnalyzer extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        $this->map =
            "docs.Employees.Select(employee => new \{ " .
            "    employeeNotes = employee.Notes[0] " .
            "\})";

        // Configure the index-field for FTS:
        $this->index("employeeNotes", FieldIndexing::search());

        // Since no analyzer is explicitly set
        // then the default 'RavenStandardAnalyzer' will be used at indexing time.

        // However, when making a search query with wildcards,
        // the 'LowerCaseKeywordAnalyzer' will be used to process the search terms
        // prior to sending them to the search engine.
    \}
\}
`}
</CodeBlock>
</TabItem>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`$explanations = new Explanations();

/** @var array<Employee> $employees */
$employees = $session
    ->query(Employees_ByNotes_usingDefaultAnalyzer_IndexEntry::class,
        Employees_ByNotes_usingDefaultAnalyzer::class)
     // If you request to include explanations,
     // you can see the exact term that was sent to the search engine.
    ->includeExplanations(null, $explanations)
     // Provide a term with a wildcard to the 'search' method:
    ->search("employeeNotes", "*rench")
    ->ofType(Employee::class)
    ->toList();

// Results will contain all Employee documents that have terms that end with 'rench'
// (e.g. French).

// Checking the explanations, you can see that the search term 'rench'
// was sent to the search engine WITH the leading wildcard, i.e. '*rench'
// since the 'LowerCaseKeywordAnalyzer' is used in this case.
$employeeId = $session->advanced()->getDocumentId($employees[0]);
$explanation = $explanations->getExplanations($employeeId)[0];

assert(str_contains($explanation, "employeeNotes:*rench"));
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByNotes/usingDefaultAnalyzer"
where search(employeeNotes, "*rench")
include explanations()
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>

<Admonition type="note" title="">

##### When using a custom analyzer:
* When setting a [custom analyzer](../../../indexes/using-analyzers.mdx#creating-custom-analyzers) in your index to tokenize field content,
  then when querying the index, the search terms in the query will be processed according to the custom analyzer's logic.

* The `*` will remain in the terms if the custom analyzer allows it.
  It is the user's responsibility to ensure that wildcards are not removed by the custom analyzer if they should be included in the query.

* Note:  
  An exception to the above is when the wildcard is used as a suffix in the search term (e.g. `Fren*`).  
  In this case the wildcard will be included in the query regardless of the analyzer's logic.

For example:

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="php">
{`class Employees_ByNotes_usingCustomAnalyzer_IndexEntry
\{
    private ?string $employeeNotes = null;

    public function getEmployeeNotes(): ?string
    \{
        return $this->employeeNotes;
    \}

    public function setEmployeeNotes(?string $employeeNotes): void
    \{
        $this->employeeNotes = $employeeNotes;
    \}
\}

class Employees_ByNotes_usingCustomAnalyzer extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        $this->map =
            "docs.Employees.Select(employee => new \{ " .
            "    employeeNotes = employee.Notes[0] " .
            "\})";

        // Configure the index-field for FTS:
        $this->index("employeeNotes", FieldIndexing::search());

        // Set a custom analyzer for the index-field:
        $this->analyze("employeeNotes", "RemoveWildcardsAnalyzer");
    \}
\}
`}
</CodeBlock>
</TabItem>
<TabItem value="Custom_analyzer" label="Custom_analyzer">
<CodeBlock language="php">
{`// The custom analyzer:
// ====================
// Analyzers run on the RavenDB server, so the analyzer itself is a .NET class.
// From the PHP client you pass its source code to the server as a string.

$removeWildcardsAnalyzer = <<<'ANALYZER'
using System.IO;
using Lucene.Net.Analysis;
using Lucene.Net.Analysis.Standard;

namespace CustomAnalyzers
\{
    public class RemoveWildcardsAnalyzer : StandardAnalyzer
    \{
        public RemoveWildcardsAnalyzer() : base(Lucene.Net.Util.Version.LUCENE_30)
        \{
        \}

        public override TokenStream TokenStream(string fieldName, System.IO.TextReader reader)
        \{
            // Read input stream and remove wildcards (*)
            string text = reader.ReadToEnd();
            string processedText = text.Replace("*", "");
            StringReader newReader = new StringReader(processedText);

            return base.TokenStream(fieldName, newReader);
        \}
    \}
\}
ANALYZER;

// Deploying the custom analyzer:
// ==============================

$analyzerDefinition = new AnalyzerDefinition();
$analyzerDefinition->setName("RemoveWildcardsAnalyzer");
$analyzerDefinition->setCode($removeWildcardsAnalyzer);

$store->maintenance()->send(new PutAnalyzersOperation($analyzerDefinition));
`}
</CodeBlock>
</TabItem>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`$explanations = new Explanations();

/** @var array<Employee> $employees */
$employees = $session
    ->query(Employees_ByNotes_usingCustomAnalyzer_IndexEntry::class,
        Employees_ByNotes_usingCustomAnalyzer::class)
    ->includeExplanations(null, $explanations)
     // Provide a term with wildcards to the 'search' method:
    ->search("employeeNotes", "*French*")
    ->ofType(Employee::class)
    ->toList();

// Even though a wildcard was provided,
// the results will contain only Employee documents that contain the exact term 'French'.

// The search term was sent to the search engine WITHOUT the wildcard,
// as the custom analyzer's logic strips them out.

// This can be verified by checking the explanations:
$employeeId = $session->advanced()->getDocumentId($employees[0]);
$explanation = $explanations->getExplanations($employeeId)[0];

assert(str_contains($explanation, "employeeNotes:french"));
assert(!str_contains($explanation, "employeeNotes:*french"));
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByNotes/usingCustomAnalyzer"
where search(employeeNotes, "*French*")
include explanations()
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>

<Admonition type="note" title="">

##### When using the Exact analyzer:
When using the default Exact analyzer in your index (which is [KeywordAnalyzer](../../../indexes/using-analyzers.mdx#using-the-default-exact-analyzer)),  
then when querying the index, the wildcards in your search terms remain untouched.  
The terms are sent to the search engine exactly as produced by the analyzer.

For example:

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="php">
{`class Employees_ByFirstName_usingExactAnalyzer_IndexEntry
\{
    private ?string $firstName = null;

    public function getFirstName(): ?string
    \{
        return $this->firstName;
    \}

    public function setFirstName(?string $firstName): void
    \{
        $this->firstName = $firstName;
    \}
\}

class Employees_ByFirstName_usingExactAnalyzer extends AbstractIndexCreationTask
\{
    public function __construct()
    \{
        parent::__construct();

        $this->map =
            "docs.Employees.Select(employee => new \{ " .
            "    firstName = employee.FirstName " .
            "\})";

        // Set the Exact analyzer for the index-field:
        // (The field will not be tokenized)
        $this->index("firstName", FieldIndexing::exact());
    \}
\}
`}
</CodeBlock>
</TabItem>
<TabItem value="query" label="query">
<CodeBlock language="php">
{`$explanations = new Explanations();

/** @var array<Employee> $employees */
$employees = $session
    ->query(Employees_ByFirstName_usingExactAnalyzer_IndexEntry::class,
        Employees_ByFirstName_usingExactAnalyzer::class)
    ->includeExplanations(null, $explanations)
     // Provide a term with a wildcard to the 'search' method:
    ->search("firstName", "Mich*")
    ->ofType(Employee::class)
    ->toList();

// Results will contain all Employee documents with FirstName that starts with 'Mich'
// (e.g. Michael).

// The search term, 'Mich*', is sent to the search engine
// exactly as was provided to the 'search' method, WITH the wildcard.
$employeeId = $session->advanced()->getDocumentId($employees[0]);
$explanation = $explanations->getExplanations($employeeId)[0];

assert(str_contains($explanation, "firstName:Mich*"));
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Employees/ByFirstName/usingExactAnalyzer"
where search(firstName, "Mich*")
include explanations()
`}
</CodeBlock>
</TabItem>
</Tabs>

</Admonition>
